Second_Step/data/46/156/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Tools.java:27: error: '.class' expected
        tri(tab[]);
                 ^
1 error
Not compiled
--|>
Grade :=>>0.00000
